# etl-watcher

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  dev_start.sh  docker-compose.yml  gunicorn.conf.py  pyproject.toml  pytest.ini  ruff.toml  start.sh  todo.txt
docs/: conf.py  index.rst  requirements.txt
docs/api/: celery_tasks.rst  endpoints.rst  models.rst
docs/getting_started/: configuration.rst  installation.rst  quick_start.rst
docs/guides/: address_lineage.rst  anomaly_detection.rst  custom_querying.rst  etl_example.rst  monitoring.rst  pipeline_management.rst  polygon_example.rst  recommended_implementation.rst  troubleshooting.rst  watermark_management.rst
docs/reference/: architecture.rst  database_schema.rst  deployment.rst  dev_kubernetes.rst  migrations.rst
docs/user/: pages.rst
examples/: etl_example.py  pipeline.py  utils.py
migrations/: env.py  script.py.mako
migrations/versions/: 20250904184009_.py  20250905192742_test.py  20250906142744_adding_in_executions.py  20250906161223_adding_in_jsonb_col.py  20250906183554_.py  20250906190139_adding_addresses.py  20250907211618_adding_address_lineage.py  20250908202242_restart.py  20250908215819_restart.py  20250909185058_initial.py  20250909202954_initial.py  20250909211814_initial.py  20250910205445_initial.py  20250911201929_initial.py  20250912164829_initial.py  20250912204439_initial.py  20250913141150_initial.py  20250913153412_initial.py  20250913165203_initial.py  20250913174135_initial.py  20250920200320_initial.py  20250921102503_initial.py  20250924194900_initial.py  20250927152421_initial.py  20250927210323_initial.py  20250927222116_initial.py  20250930170804_initial.py  20250930222817_initial.py  20251005124405_initial.py  20251007183231_initial.py  20251008100712_initial.py  20251011103728_initial.py  20251018195622_initial.py  20251019142513_initial.py  20251021195850_initial.py
sdk_examples/: etl_example.py  monitoring_examples.py  pipeline.py
src/: app.py  celery_app.py  celery_tasks.py  logging_conf.py  main.py  middleware.py  notifier.py  settings.py  types.py
src/database/: __init__.py  address_lineage_utils.py  address_type_utils.py  address_utils.py  anomaly_detection_utils.py  db.py  freshness_utils.py  lineage_graph_utils.py  log_cleanup_utils.py  pipeline.py  pipeline_execution.py  pipeline_execution_utils.py  pipeline_type.py  pipeline_type_utils.py  pipeline_utils.py  session.py  timeliness_utils.py
src/diagnostics/: diagnose_celery.py  diagnose_connection.py  diagnose_performance.py  diagnose_redis.py  diagnose_schema.py  locustfile.py  test_connection_speed.py
src/models/: address.py  address_lineage.py  address_type.py  anomaly_detection.py  freshness.py  lineage_graph.py  log_cleanup.py  pipeline.py  pipeline_execution.py  pipeline_type.py  timeliness.py
src/reporting/: daily_pipeline_report.sql  (+1 more)
watcher/: .helmignore  Chart.yaml  README.md  values-dev.yaml  values-gcp-dev.yaml  values-gcp-prod.yaml  values-prod.yaml  values.yaml
(+144 files in other folders)
