[project]
name = "watcher"
version = "0.1.0"
description = "Open Source ETL Metadata Framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "asgiref>=3.7.0",
    "asyncpg>=0.30.0",
    "celery[redis]>=5.5.3",
    "fastapi>=0.116.1",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "locust>=2.41.1",
    "logfire[celery,fastapi,sqlalchemy]>=4.4.0",
    "orjson>=3.11.3",
    "pendulum>=3.1.0",
    "pre-commit>=4.3.0",
    "pydantic-extra-types[pendulum]>=2.10.5",
    "pydantic-settings>=2.10.1",
    "pyinstrument>=5.1.1",
    "pytest>=8.4.1",
    "rich>=14.1.0",
    "ruff>=0.12.11",
    "scalar-fastapi>=1.3.0",
    "slack-sdk>=3.36.0",
    "sqlalchemy[asyncio]>=2.0.43",
    "sqlmodel>=0.0.24",
    "uvicorn[standard]>=0.35.0",
]
