[project]
name = "Watcher"
version = "1.0.0"
description = "Open Source ETL Metadata Framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "asgiref>=3.7.0",
    "asyncpg>=0.30.0",
    "celery[redis]>=5.5.3",
    "etl-watcher-sdk>=0.1.1",
    "fastapi>=0.116.1",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "logfire[celery,fastapi,sqlalchemy]>=4.4.0",
    "orjson>=3.11.3",
    "pendulum>=3.1.0",
    "pydantic-extra-types[pendulum]>=2.10.5",
    "pydantic-settings>=2.10.1",
    "rich>=14.1.0",
    "scalar-fastapi>=1.3.0",
    "slack-sdk>=3.36.0",
    "sqlalchemy[asyncio]>=2.0.43",
    "sqlmodel>=0.0.24",
    "uvicorn[standard]>=0.35.0",
]

[tool.pytest.ini_options]
testpaths = [ "src/tests" ]
pythonpath = [ "." ]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning",
    "ignore::FutureWarning",
    "ignore::RuntimeWarning",
    "ignore::ResourceWarning",
    "ignore::sqlalchemy.exc.SAWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.ruff]
lint.select = ["I"]
exclude = [
    "migrations/",
]

[dependency-groups]
dev = [
    "locust>=2.42.0",
    "myst-parser>=4.0.1",
    "pre-commit>=4.3.0",
    "pyinstrument>=5.1.1",
    "pytest>=8.4.2",
    "ruff>=0.14.2",
    "sphinx>=8.2.3",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-autodoc-typehints>=3.5.2",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx-tabs>=3.4.7",
    "sphinxcontrib-httpdomain>=1.8.1",
]
